gitTestProject/src/objects/obj1__c.object
<CustomObject>
    <fields>
        <fullName>First_List__c</fullName>
        <label>First List</label>
        <picklist>
            <picklistValues>
                <fullName>abc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>xyz</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_List__c</fullName>
        <label>Second List</label>
        <picklist>
            <controllingField>First_List__c</controllingField>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>education__c</fullName>
        <label>education</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>hobbis__c</fullName>
        <label>hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>playing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>drawing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>singing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>acting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>obj3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>obj3</label>
        <referenceTo>obj3__c</referenceTo>
        <relationshipLabel>obj1</relationshipLabel>
        <relationshipName>obj1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>obj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>obj1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>